# tacit

./: .gitignore  .travis.yml  Cargo.toml  README.md  TODO.md  build_web.sh
.circleci/: config.yml
camera/: Cargo.toml  README.md
camera/src/: lib.rs
camera/src/camera/: mod.rs
camera/src/perspective/: mod.rs
geoprim/: Cargo.toml  README.md
geoprim/src/: lib.rs
implicit-cli/: Cargo.toml
implicit-cli/src/: main.rs
implicit-mesh/: Cargo.toml
implicit-mesh/src/: function.rs  function_ir.rs  gen.rs  interval.rs  key.rs  lib.rs  mesh_tree.rs  mtree.rs  parser.rs  parser_error.rs  util.rs
implicit-mesh/src/cell_keys/: mod.rs  morton_keys.rs  neighbors.rs
web-client/: .gitignore  Cargo.toml  README.md  build.sh  index.html  tacit_web_app.js  tacit_web_app_bg.wasm
web-client/src/: canvas.rs  controls.rs  lib.rs
web-client/src/app/: mod.rs
web-client/src/render/: buffers.rs  color.rs  fade_background.rs  gnomon.rs  line_system.rs  mod.rs  plot_buffers.rs  point_system.rs
web-client/src/shader/: billboard.vert  color_fade.frag  fade_background.frag  fade_background.vert  fragment_shader.frag  mod.rs  perpendicular_instance_vert.glsl  simple.frag  vertex_shader.vert
web-client/src_web/: index.html
