[package]
name = "tacit-web-app"
version = "0.1.0"
authors = ["SallySoul <SallySoul@protonmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "=0.1.5"
cgmath = "0.16.1"
js-sys = "0.3.44"
wasm-bindgen = "=0.2.67"
smallvec = "0.6.8"
camera = { path = "../camera" }
implicit-mesh = { path = "../implicit-mesh" }
geoprim = { path = "../geoprim" }

[dependencies.web-sys]
version = "0.3.44"
features = [
  'CssStyleDeclaration',
  'Document',
  'Element',
  'Event',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlElement',
  'HtmlImageElement',
  'HtmlInputElement',
  'InputEvent',
  'MouseEvent',
  'Node',
  'Touch',
  'TouchEvent',
  'TouchList',
  'WebGlBuffer',
  'WebGlFramebuffer',
  'WebGlProgram',
  'WebGlRenderbuffer',
  'WebGlRenderingContext',
  'WebGlShader',
  'WebGlTexture',
  'WebGlUniformLocation',
  'WebGlVertexArrayObject',
  'WheelEvent',
  'Window',
  'console',
]

